2011-11-17  Jan Nijtmans <nijtmans@users.sourceforge.net>

	* upgrade to libjpeg version 8c

2011-07-26  Jan Nijtmans <nijtmans@users.sourceforge.net>

	* upgrade to latest TEA tcl.m4 and install.sh
	* upgrade to libpng 1.4.8

2011-04-22  Jan Nijtmans <nijtmans@users.sourceforge.net>

	* upgrade to libpng 1.4.7

2010-12-14  Jan Nijtmans <nijtmans@users.sourceforge.net>

	* upgrade to latest TEA tcl.m4 and autoconf 2.68

2010-11-26  Jan Nijtmans <nijtmans@users.sourceforge.net>

	* Upgrade to TEA 3.9

2010-09-17  Jan Nijtmans <nijtmans@users.sourceforge.net>

	*
	* Released and tagged Tkimg 1.4 ========================
	*

2010-08-30  Jan Nijtmans <nijtmans@users.sourceforge.net>

	* license.terms: Fix DFARs note for number-adjusted rights clause

2010-07-06  Jan Nijtmans <nijtmans@users.sourceforge.net>

	* genStubs.tcl: "generic" argument is no longer necessary when
	there are no suppressors.
	* [tkimg-Bugs-3011001] Only support accessing tkImg
	procs through stub table implemented for libpng

2010-06-30  Jan Nijtmans <nijtmans@users.sourceforge.net>

	* upgrade to libtiff 3.9.4

2010-06-28  Jan Nijtmans <nijtmans@users.sourceforge.net>

	* upgrade to libpng 1.4.3
	* backport various ttkGenStubs.tcl improvements
	  to genStubs.tcl

2010-06-17  Jan Nijtmans <nijtmans@users.sourceforge.net>

	* upgrade to libjpeg version 8b

2010-06-04  Jan Nijtmans <nijtmans@users.sourceforge.net>

	* [tkimg-Bugs-3011001] Only support accessing tkImg
	procs through stub table implemented for base and zlib

2010-05-11  Jan Nijtmans <nijtmans@users.sourceforge.net>

	* upgrade to libpng 1.4.2

2010-05-04  Jan Nijtmans <nijtmans@users.sourceforge.net>

	* Make type "boolean" available everywhere, so individual
	  handlers don't need to define Boln any more.
	* Formatting.
	* Make --enable-symbols build on MSVC a little bit
	  closer to reality and explain disabled warnings.

2010-05-03  Jan Nijtmans <nijtmans@users.sourceforge.net>
